# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16eGS1iaEQJ4szAijJQCYuiFxFTu0jdVE69jXnU8Bt5vI=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xkuMUYv2yigRdN5gHIIWq4sexgk1WYvk1bT2yjVIjsKU=',
      'err': 0,
    }),
  ])
# ---
